# radify

./: .gitignore  README.md  app.py  pyproject.toml  rad.md  requirements.txt
data/: radify_db.sql
radify-web/: README.md  angular.json  package-lock.json  package.json
radify-web/src/: index.html
radify-web/src/app/: app.component.spec.ts  app.component.ts  app.config.ts  app.routes.ts
radify-web/src/app/auth-callback/: auth-callback.component.ts
radify-web/src/app/dashboard/: dashboard.component.css  dashboard.component.html  dashboard.component.ts
radify-web/src/app/guards/: auth.guard.ts
radify-web/src/app/services/: common.service.ts  rad-generation.service.spec.ts  rad-generation.service.ts  user.service.ts
radify-web/src/app/signin/: signin.component.css  signin.component.html  signin.component.ts
radify_api/: README.md  pyproject.toml  requirements.txt
radify_api/generated_rads/: RAD_bf81f339c96a494582fba79146dab675.txt  RAD_d0176fdb03c1434d926c206c574c1ec2.txt
radify_api/src/radify_api/: crew.py  database.py  main.py  models.py  schemas.py
radify_api/src/radify_api/auth/: google_oauth.py  signin.py  signup.py  token.py  token_verification.py
radify_api/src/radify_api/utils/: file_handler.py  rad_creator.py  rad_generator.py
radify_api/uploaded_specs/: f5f244f7-2fa5-434f-b659-920a7621f82f.docx
src/radify/: create_rad.py  crew.py  main.py
src/radify/config/: agents.yaml  tasks.yaml
